--- a/eda/random-forest-regressor.ipynb
+++ b/eda/random-forest-regressor.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import random\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -14,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "4  0.01909  0.016816       0.028896  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
        "                      warm_start=False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.009164573571843386"
+       "0.00962477555145811"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09573177932036668"
+       "0.09810594044938416"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,34 +280,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'mse', 'max_depth': 2, 'n_estimators': 71, 'random_state': 71}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_errors = pd.DataFrame({'error': [e for ls in error.tolist() for e in ls]})\n",
-    "df_errors.plot.kde()\n",
-    "plt.title(\"Error distribution\")\n",
-    "plt.xlabel(\"Error\")\n",
-    "plt.grid()\n",
-    "plt.show()\n",
-    "\n",
-    "100 * df_errors.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_results = pd.DataFrame(\n",
-    "    {\n",
-    "        \"y\": train_y.wage_increase.values,\n",
-    "        \"y_estimate\": [e for ls in estimates.tolist() for e in ls]\n",
+    "def get_random_params():\n",
+    "    return {\n",
+    "        \"n_estimators\": random.choice((range(10, 100))),\n",
+    "        \"criterion\": random.choice([\"mse\", \"mae\"]),\n",
+    "        \"max_depth\": random.choice(list(range(1, 10)) + [None]),\n",
+    "        \"random_state\": random.choice((range(10, 100)))\n",
     "    }\n",
-    ")\n",
     "\n",
-    "100 * test_results.describe()"
+    "param = get_random_params()\n",
+    "param\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rsme(df, param, target_col, features):\n",
+    "    train = df.sample(frac=0.7)\n",
+    "    test = df.drop(train.index)\n",
+    "    train_x = train.drop(target_col, 1)\n",
+    "    train_y = train.drop(features, 1)\n",
+    "    test_x = test.drop(target_col, 1)\n",
+    "    test_y = test.drop(features, 1)\n",
+    "    model= RandomForestRegressor(**param)\n",
+    "    model.fit(train_x, np.ravel(train_y))\n",
+    "    estimates = model.predict(train_x)\n",
+    "    error = np.asmatrix(train_y.values - estimates)\n",
+    "    sme = (error.T * error / len(error)).tolist()[0][0]\n",
+    "    return np.sqrt(sme)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09537525672600237"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_rsme(dfCurated, param, target_col=\"wage_increase\", features=[c for c in dfCurated.columns if c != \"wage_increase\"])"
    ]
   },
   {
@@ -315,11 +354,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_results.y.plot.kde(c='r')\n",
-    "test_results.y_estimate.plot.kde(c='b')\n",
-    "plt.title(\"Kernel Density Estimation\")\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "result = []\n",
+    "for i in range(1000):\n",
+    "    param = get_random_params()\n",
+    "    rsme = get_rsme(dfCurated, param, target_col=\"wage_increase\", features=[c for c in dfCurated.columns if c != \"wage_increase\"])\n",
+    "    param[\"rsme\"] = rsme\n",
+    "    result.append(param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>criterion</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>n_estimators</th>\n",
+       "      <th>random_state</th>\n",
+       "      <th>rsme</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mae</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.161175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>mae</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.094977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>mae</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.111785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mse</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>51</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0.108328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mae</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>36</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.125122</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  criterion  max_depth  n_estimators  random_state      rsme\n",
+       "0       mae        9.0            27            48  0.161175\n",
+       "1       mae        3.0            93            17  0.094977\n",
+       "2       mae        3.0            79            15  0.111785\n",
+       "3       mse        NaN            51            63  0.108328\n",
+       "4       mae        6.0            36            35  0.125122"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_df = pd.DataFrame(result)\n",
+    "result_df.head()"
    ]
   },
   {
@@ -328,19 +465,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(test_results.y, test_results.y_estimate, '.b')\n",
-    "plt.plot(test_results.y, test_results.y, '.r')\n",
-    "plt.title(\"Estimate VS Original\")\n",
-    "plt.grid()\n",
-    "plt.show()"
+    "output_path = os.path.join(DATA_CLEAN_PATH, \"param_random_forest.csv\")\n",
+    "result.to_csv(output_path)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -348,18 +475,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
   }
  },
  "nbformat": 4,
