XoCed: Results with 2400 iterations. the following parameters were modified:         "n_estimators": random.choice((range(0, 900))),         "criterion": random.choice(["mse", "mae"]),         "max_depth": random.choice(list(range(1, 100)) + [None]),         "random_state": random.choice((range(10, 100))),         "max_features": random.choice(["auto", "sqrt", "log2"]),         "min_impurity_decrease": random.choice((range(10, 100)))/100,

--- a/eda/random-forest-regressor.ipynb
+++ b/eda/random-forest-regressor.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,43 +210,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=2,\n",
-       "                      max_features='auto', max_leaf_nodes=None,\n",
-       "                      min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=1,\n",
+       "                      max_features='sqrt', max_leaf_nodes=None,\n",
+       "                      min_impurity_decrease=0.1, min_impurity_split=None,\n",
        "                      min_samples_leaf=1, min_samples_split=2,\n",
-       "                      min_weight_fraction_leaf=0.0, n_estimators=100,\n",
-       "                      n_jobs=None, oob_score=False, random_state=0, verbose=0,\n",
-       "                      warm_start=False)"
+       "                      min_weight_fraction_leaf=0.0, n_estimators=5000,\n",
+       "                      n_jobs=None, oob_score=False, random_state=None,\n",
+       "                      verbose=0, warm_start=True)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "regr = RandomForestRegressor(max_depth=2, random_state=0, n_estimators=100)\n",
+    "regr = RandomForestRegressor(max_depth=1, n_estimators=5000, warm_start=True, max_features=\"sqrt\", min_impurity_decrease=0.1)\n",
     "regr.fit(train_x, np.ravel(train_y)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.00962477555145811"
+       "0.008850522634132578"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09810594044938416"
+       "0.09407721633919967"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,16 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'criterion': 'mse', 'max_depth': 2, 'n_estimators': 71, 'random_state': 71}"
+       "{'criterion': 'mae',\n",
+       " 'max_depth': 16,\n",
+       " 'max_features': 'log2',\n",
+       " 'min_impurity_decrease': 0.21,\n",
+       " 'n_estimators': 396,\n",
+       " 'random_state': 49}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,10 +302,12 @@
    "source": [
     "def get_random_params():\n",
     "    return {\n",
-    "        \"n_estimators\": random.choice((range(10, 100))),\n",
+    "        \"n_estimators\": random.choice((range(0, 900))),\n",
     "        \"criterion\": random.choice([\"mse\", \"mae\"]),\n",
-    "        \"max_depth\": random.choice(list(range(1, 10)) + [None]),\n",
-    "        \"random_state\": random.choice((range(10, 100)))\n",
+    "        \"max_depth\": random.choice(list(range(1, 100)) + [None]),\n",
+    "        \"random_state\": random.choice((range(10, 100))),\n",
+    "        \"max_features\": random.choice([\"auto\", \"sqrt\", \"log2\"]),\n",
+    "        \"min_impurity_decrease\": random.choice((range(10, 100)))/100,\n",
     "    }\n",
     "\n",
     "param = get_random_params()\n",
@@ -309,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,16 +337,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09537525672600237"
+       "0.09656246951049315"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +362,7 @@
    "outputs": [],
    "source": [
     "result = []\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    param = get_random_params()\n",
     "    rsme = get_rsme(dfCurated, param, target_col=\"wage_increase\", features=[c for c in dfCurated.columns if c != \"wage_increase\"])\n",
     "    param[\"rsme\"] = rsme\n",
@@ -364,96 +371,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>criterion</th>\n",
-       "      <th>max_depth</th>\n",
-       "      <th>n_estimators</th>\n",
-       "      <th>random_state</th>\n",
-       "      <th>rsme</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>mae</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>27</td>\n",
-       "      <td>48</td>\n",
-       "      <td>0.161175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>mae</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>93</td>\n",
-       "      <td>17</td>\n",
-       "      <td>0.094977</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>mae</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>79</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.111785</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>mse</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51</td>\n",
-       "      <td>63</td>\n",
-       "      <td>0.108328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>mae</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0.125122</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  criterion  max_depth  n_estimators  random_state      rsme\n",
-       "0       mae        9.0            27            48  0.161175\n",
-       "1       mae        3.0            93            17  0.094977\n",
-       "2       mae        3.0            79            15  0.111785\n",
-       "3       mse        NaN            51            63  0.108328\n",
-       "4       mae        6.0            36            35  0.125122"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_df = pd.DataFrame(result)\n",
     "result_df.head()"
@@ -461,13 +381,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_path = os.path.join(DATA_CLEAN_PATH, \"param_random_forest.csv\")\n",
-    "result.to_csv(output_path)"
+    "output_path = os.path.join(DATA_CLEAN_PATH, \"param_random_forest_2.csv\")\n",
+    "result_df.to_csv(output_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
